<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_solved_label">Solved</string>
    <string name="contact_police_label">Contact Police</string>

    <string name="crimelist_first_button">First Crime</string>
    <string name="crimelist_last_button">Last Crime</string>

    <!-- dialog title strings -->
    <string name="date_picker_title">Date of crime:</string>


    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="remove_crime">Remove</string>
    <string name="crime_suspect_text">Choose Suspect</string>
<string name="crime_report_text">Send Crime Report</string>

    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
<string name="crime_report_unsolved">The is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="call_suspect">Call Suspect</string>

    <string name="crime_image_view_title"></string>
    
    <!-- accessiblity strings -->
    <string name="crime_photo_button_description">Take photo of crime scene</string>
    <string name="crime_photo_no_image_description">Crime scene photo (not set)</string>
    <string name="crime_photo_image_description">Crime scene photo (set)</string>

    <string name="crime_summary_text">%1$s took place on %2$s and is %3$s.</string>

    <string name="photo_announcement">Photo taken!</string>
    <string name="no_photo_announcement">No Photo taken!</string>

</resources>

