<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
                android:layout_margin="16dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        >

        <!-- left side layout -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/crime_photo"
                android:contentDescription="@string/crime_photo_no_image_description"
                android:scaleType="centerInside"
                android:focusable="true"
                android:cropToPadding="true"
                android:background="@android:color/darker_gray"
                />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/crime_camera"
                android:contentDescription="@string/crime_photo_button_description"

                android:src="@android:drawable/ic_menu_camera"
                />
        </LinearLayout>

        <!-- right hand side -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >


            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:text="@string/crime_title_label"
                android:labelFor="@+id/crime_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/crime_title"
                android:hint="@string/crime_title_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>


    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:text="@string/crime_details_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:labelFor="@+id/crime_date"
    android:text="Crime Date"

    />
    <Button
        android:id="@+id/crime_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/crime_time"
        android:text="Crime Time"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/crime_time"
        />
    <CheckBox
        android:id="@+id/crime_solved"
        android:text="@string/crime_solved_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/crime_suspect"
        android:text="@string/crime_suspect_text"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/crime_report"
        android:text="@string/crime_report_text"
        />

    <Button
        android:id="@+id/crime_call_suspect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call_suspect"/>

</LinearLayout>